# wtf-codebot

./: .env.example  .gitignore  CLI_IMPLEMENTATION_SUMMARY.md  CLI_USAGE.md  CONTRIBUTING.md  DEPENDENCY_ANALYSIS.md  DEVELOPER_GUIDE.md  DISCOVERY_LAYER_DOCUMENTATION.md  Dockerfile  HTML_REPORTS_README.md  LICENSE  PATTERN_RECOGNITION_README.md  PERFORMANCE_RESULTS.md  README.md  REQUIREMENTS_ANALYSIS_AND_ARCHITECTURE.md  STATIC_ANALYSIS_ENGINES_SUMMARY.md  TASK_COMPLETION_SUMMARY.md  UNIFIED_FINDINGS_SYSTEM.md  analysis_result.md  demo_analyzers.py  demo_dependency_analysis.py  demo_discovery.py  demo_html_reports.py  demo_integrations.py  demo_pattern_recognition.py  demo_unified_findings.py  docker-compose.yml  enhanced_html_reporter.py  enhanced_json_reporter.py  html_report_generator.py  pyproject.toml  test_api.py  test_detailed_parsing.py  test_direct_api.py  test_pattern_recognition.py  test_rate_limiting.py  wtf-codebot.yaml  wtf-codebot.yaml.example
.claude/: settings.local.json
.github/workflows/: ci.yml
.history/: CHANGELOG_20250705165832.md  CHANGELOG_20250705210203.md  DEVELOPER_GUIDE_20250705210203.md  Dockerfile_20250705170835  Dockerfile_20250705210202  README_20250705210203.md  USAGE_DOCS_20250705170331.md  USAGE_DOCS_20250705210203.md  demo_integrations_20250705210202.py  enhanced_json_reporter_20250705210202.py  pyproject_20250705210202.toml  wtf-codebot-integrations_20250705163918.yaml  wtf-codebot-integrations_20250705210203.yaml
.history/docs/: enhanced-json-schema_20250705161953.md  enhanced-json-schema_20250705210204.md
.history/reports/: enhanced_interactive_report_20250705210204.html  enhanced_unified_findings.min_20250705161830.json  enhanced_unified_findings.min_20250705210204.json  enhanced_unified_findings_20250705210204.json  interactive_report_20250705210204.html  unified_findings_20250705210202.sarif
.history/wtf_codebot/cli/: argparse_cli_20250705152730.py  argparse_cli_20250705210202.py
.history/wtf_codebot/findings/: reporter_20250705210202.py
.history/wtf_codebot/integrations/: README_20250705164009.md  README_20250705210204.md
.wtf_cache/: analysis.db
benchmark_results/: _benchmark_results.json  _summary.md
custom_templates/: dependencies.html  main_report.html  styles.css
demo_pattern_results/: code_batches.json  cost_summary.json  cost_tracking.json  cost_tracking.json.backup  pattern_analysis.csv  pattern_analysis.json  pattern_analysis.md
docs/: performance_optimization.md
reports/: demo_basic_report.html  demo_custom_report.html  demo_enhanced_report.html  dependencies.csv  dependency_analysis.html  dependency_analysis.json  dependency_analysis.md  enhanced_interactive_report.html  enhanced_unified_findings.json  interactive_report.html  sample_dependencies.json  sample_findings.json  unified_findings.csv  unified_findings.html  unified_findings.json  unified_findings.md  unified_findings.sarif
scripts/: package.py  run_benchmarks.py
simple_pattern_results/: cost_summary.json  cost_tracking.json  cost_tracking.json.backup  pattern_analysis.json  pattern_analysis.md
templates/: charts.html  tables.html
tests/: test_performance.py
wtf_codebot/: __init__.py
wtf_codebot/analyzers/: __init__.py  base.py  dependency_analyzer.py  javascript_analyzer.py  python_analyzer.py  registry.py
wtf_codebot/cli/: __init__.py  argparse_cli.py  dependency_cli.py  enhanced_cli.py  main.py
wtf_codebot/core/: __init__.py  analysis_engine.py  config.py  exceptions.py  logging.py
wtf_codebot/discovery/: __init__.py  models.py  scanner.py
wtf_codebot/discovery/parsers/: __init__.py  base.py  css_parser.py  factory.py  html_parser.py  javascript_parser.py  json_parser.py  markdown_parser.py  python_parser.py  registry.py  typescript_parser.py  yaml_parser.py
wtf_codebot/findings/: __init__.py  aggregator.py  deduplicator.py  models.py  reporter.py
wtf_codebot/integrations/: __init__.py  base.py  github_issues.py  jira.py  manager.py  slack.py  webhook.py
wtf_codebot/pattern_recognition/: __init__.py  batcher.py  claude_client.py  cost_tracker.py  orchestrator.py  patterns.py  rate_limiter.py
wtf_codebot/performance/: __init__.py  benchmarks.py  cache.py  parallel.py  profiler.py
wtf_codebot/reporters/: __init__.py  dependency_reporter.py
wtf_codebot/utils/: __init__.py  file_utils.py  rate_limiter.py
wtf_codebot/web/: __init__.py  server.py  storage.py
wtf_codebot/web/templates/: analysis_results.html  index.html
