[tool.poetry]
name = "wtf-codebot"
version = "0.1.0"
description = "AI-powered code analysis and review tool"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "wtf_codebot"}]

[tool.poetry.dependencies]
python = "^3.8.1"
click = "^8.1.7"
typer = "^0.9.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
anthropic = "^0.8.0"
rich = "^13.7.0"
pyyaml = "^6.0.1"
structlog = "^23.2.0"
beautifulsoup4 = "^4.12.0"
cssutils = "^2.9.0"
tree-sitter = "^0.20.0"
tree-sitter-python = "^0.20.0"
tree-sitter-javascript = "^0.20.0"
tree-sitter-typescript = "^0.20.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"

[tool.poetry.scripts]
wtf-codebot = "wtf_codebot.cli.main:main"
wtf-codebot-typer = "wtf_codebot.cli.enhanced_cli:main"
wtf-codebot-argparse = "wtf_codebot.cli.argparse_cli:main"
wtf-codebot-deps = "wtf_codebot.cli.dependency_cli:analyze_dependencies"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
